tests/bad/tc5042-period_with_no_sub_class.vtt
WEBVTT

00:11.000 --> 00:13.000
We <i. >are</i> in New York City